# llm-describe-image

./: .gitignore  config.defaults.toml  config_loader.py  install.sh  llm-describe-directory-opt.py  llm-describe-directory.py  llm-describe-image.py  llm_describe_directory.py  pyproject.toml
llms/: base.py
pipelines/: __init__.py  pipeline.py
pipelines/describe/: __init__.py  pipeline.py
pipelines/describe_image/: __init__.py  pipeline.py
pipelines/enhance/: __init__.py  pipeline.py
pipelines/fix_jpeg/: __init__.py  pipeline.py
pipelines/geolocate/: __init__.py  pipeline.py
pipelines/shortcut/: __init__.py
tasks/: task.py
tasks/1. discover/: __init__.py  task.py
tasks/2. skip_check/: task.py
tasks/3. download/: task.py
tasks/4. llm/: task.py
tasks/4. llm/llms/: __init__.py  base.py
tasks/4. llm/llms/lmstudio/: backend.py
tasks/5. write/: task.py
tasks/context/: __init__.py  task.py
tasks/discover/: task.py
tasks/download/: __init__.py  metadata_extractor.py  task.py
tasks/enhance/: __init__.py  task.py
tasks/fix_jpeg/: __init__.py  task.py
tasks/geolocate/: __init__.py  task.py  write_task.py
tasks/llm/: __init__.py  task.py
tasks/llm/llms/: __init__.py  base.py
tasks/llm/llms/lmstudio/: backend.py
tasks/shortcut/: __init__.py  task.py
tasks/skip_check/: __init__.py  task.py
tasks/write/: __init__.py  task.py
